# mo2-ini-explorer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  IniExplorer.cpp  IniExplorer.h
src/lib/: constants.h
src/ui/: IniExplorerWindow.cpp  IniExplorerWindow.h
